java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldPrimitive.pass
/*
 * CreateElement1.java
 *
 * Created on March 21, 2005, 10:21 PM
 *
 * To change this template, choose Tools | Options and locate the template under
 * the Source Creation and Management node. Right-click the template and choose
 * Open. You can then make changes to the template in the Source Editor.
 */

package org.netbeans.test.java.hints;

/**
 *
 */
public class CreateFieldPrimitive {
    private int t;
    
    /** Creates a new instance of CreateElement1 */
    public CreateFieldPrimitive() {
    }
    
    public final void main(String[] args) {
        t = 1;
    }

}
